# aleae-codebase

aleaengineering_ARM_makefiles_article/src/: CMakeLists.txt  arm-none-eabi-gcc.cmake  main.c
aleaengineering_ARM_makefiles_article/src/startup/: CMakeLists.txt  startup_stm32f103c8tx.s
